Devops - a hopeful future

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ markdown: kramdown
 timezone: Europe/Helsinki
 email: teemu.risikko@gmail.com
 description: >
-  A blog about my experiences about agile in corporate setting
+  A blog about my experiences in the IT field
 url: "https://terisikk.github.io/"
 twitter_username: TeemuRisikko
 github_username: terisikk
